--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,12 +30,15 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.android.support:design:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.devbrackets.android:exomedia:4.2.0'
+    implementation 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'
+
 }
 
 
@@ -47,6 +50,5 @@ configurations.all {
                 details.useVersion '28.0.0'
             }
         }
-
     }
 }
