--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,10 +8,14 @@
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
-            android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name=".login.LoginActivity">
+
+        <activity android:name=".login.LoginActivity"
+                  android:configChanges="orientation|keyboardHidden|screenSize"
+                  android:screenOrientation="portrait"
+                  android:theme="@style/AppTheme.Fullscreen">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
@@ -19,10 +23,15 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".list.MainActivity"/>
+        <activity android:name=".list.MainActivity"
+                  android:configChanges="orientation|keyboardHidden|screenSize"/>
 
-        <activity android:name=".player.PlayerExo"/>
-        
+        <activity android:name=".player.PlayerExo"
+                  android:launchMode="singleInstance"
+                  android:theme="@style/AppTheme.Fullscreen"
+                  android:configChanges="orientation|keyboardHidden|screenSize"
+                  android:screenOrientation="landscape"/>
+
     </application>
 
 </manifest>
