--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,11 @@
         </activity>
 
         <activity android:name=".list.MainActivity"
-                  android:configChanges="orientation|keyboardHidden|screenSize"/>
+                  android:configChanges="orientation|keyboardHidden|screenSize">
+            <meta-data
+                    android:name="android.app.searchable"
+                    android:resource="@xml/searchable"/>
+        </activity>
 
         <activity android:name=".player.PlayerExo"
                   android:launchMode="singleInstance"
