--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,32 +10,34 @@
             android:label="@string/app_name"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-
-        <activity android:name=".login.LoginActivity"
-                  android:configChanges="orientation|keyboardHidden|screenSize"
-                  android:screenOrientation="portrait"
-                  android:theme="@style/AppTheme.Fullscreen">
-
+        <activity
+                android:name=".login.LoginActivity"
+                android:configChanges="orientation|keyboardHidden|screenSize"
+                android:screenOrientation="portrait"
+                android:theme="@style/AppTheme.Fullscreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
+
                 <category android:name="android.intent.category.LAUNCHER"/>
+
                 <action android:name="android.intent.action.VIEW"/>
             </intent-filter>
         </activity>
-
-        <activity android:name=".list.MainActivity"
-                  android:configChanges="orientation|keyboardHidden|screenSize">
+        <activity
+                android:name=".list.ListActivity"
+                android:configChanges="orientation|keyboardHidden|screenSize">
             <meta-data
                     android:name="android.app.searchable"
                     android:resource="@xml/searchable"/>
         </activity>
-
-        <activity android:name=".player.PlayerExo"
-                  android:launchMode="singleInstance"
-                  android:theme="@style/AppTheme.Fullscreen"
-                  android:configChanges="orientation|keyboardHidden|screenSize"
-                  android:screenOrientation="landscape"/>
-
+        <activity
+                android:name=".player.PlayerExo"
+                android:configChanges="orientation|keyboardHidden|screenSize"
+                android:launchMode="singleInstance"
+                android:screenOrientation="landscape"
+                android:theme="@style/AppTheme.Fullscreen"/>
+        <activity android:name=".categories.CategoriesActivity">
+        </activity>
     </application>
 
 </manifest>
