--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,6 +39,11 @@
                 android:theme="@style/AppTheme.Fullscreen"/>
         <activity android:name=".categories.CategoriesActivity">
         </activity>
+
+        <meta-data
+                android:name=
+                        "com.google.android.gms.cast.framework.OPTIONS_PROVIDER_CLASS_NAME"
+                android:value="com.iptv.android.casting.CastOptionsProvider" />
     </application>
 
 </manifest>
