--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,16 +5,17 @@
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
+            android:name=".App"
             android:allowBackup="true"
-            android:icon="@mipmap/ic_launcher"
+            android:icon="@mipmap/turkosat"
             android:label="@string/app_name"
             android:supportsRtl="true"
-            android:usesCleartextTraffic="true"
-            android:theme="@style/AppTheme">
+            android:theme="@style/AppTheme"
+            android:usesCleartextTraffic="true">
         <activity
                 android:name=".login.LoginActivity"
                 android:configChanges="orientation|keyboardHidden|screenSize"
-                android:screenOrientation="portrait"
+                android:screenOrientation="landscape"
                 android:theme="@style/AppTheme.Fullscreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -26,7 +27,8 @@
         </activity>
         <activity
                 android:name=".list.ListActivity"
-                android:configChanges="orientation|keyboardHidden|screenSize">
+                android:configChanges="orientation|keyboardHidden|screenSize"
+                android:screenOrientation="landscape">
             <meta-data
                     android:name="android.app.searchable"
                     android:resource="@xml/searchable"/>
@@ -37,7 +39,18 @@
                 android:launchMode="singleInstance"
                 android:screenOrientation="landscape"
                 android:theme="@style/AppTheme.Fullscreen"/>
-        <activity android:name=".categories.CategoriesActivity">
+        <activity
+                android:name=".categories.CategoriesActivity"
+                android:screenOrientation="landscape">
+        </activity>
+        <activity
+                android:name=".main.MainActivity"
+                android:screenOrientation="landscape"
+                android:theme="@style/AppTheme.Fullscreen">
+        </activity>
+        <activity android:name=".settings.SettingsActivity"
+                  android:screenOrientation="landscape"
+                  android:theme="@style/AppTheme.Fullscreen">
         </activity>
     </application>
 
