--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,3 +1,17 @@
+buildscript {
+    repositories {
+        maven { url 'https://plugins.gradle.org/m2/'}
+    }
+    dependencies {
+        classpath 'gradle.plugin.com.onesignal:onesignal-gradle-plugin:[0.11.0, 0.99.99]'
+    }
+}
+apply plugin: 'com.onesignal.androidsdk.onesignal-gradle-plugin'
+
+repositories {
+    maven { url 'https://maven.google.com' }
+}
+
 apply plugin: 'com.android.application'
 
 apply plugin: 'kotlin-android'
@@ -8,11 +22,16 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.iptv.android"
+        manifestPlaceholders = [
+                onesignal_app_id: '70c498a3-2dd6-40f1-ba51-a19ac082dc92',
+                onesignal_google_project_number: 'REMOTE'
+        ]
         minSdkVersion 21
         targetSdkVersion 28
-        versionCode 1
-        versionName "1.0"
+        versionCode 5
+        versionName "1.1"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
     }
     buildTypes {
         release {
@@ -39,6 +58,7 @@ dependencies {
     implementation 'com.devbrackets.android:exomedia:4.2.0'
     implementation 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'
     implementation 'pl.droidsonroids:casty:1.0.8'
+    implementation 'com.onesignal:OneSignal:[3.9.1, 3.99.99]'
 
 }
 
